# Chip-8

./: .gitignore  CMakeLists.txt  readme.md
include/: chip8.h
src/: chip8.c  main.c
